# qr-code-generator

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: CI.yml
src/qr_code_generator/: __init__.py  cli.py  generator.py
tests/: test_generator.py
